base/juiceshop/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: juice-shop
  namespace: juice-shop
  annotations:
    nginx.org/proxy-connect-timeout: "30s"
    nginx.org/proxy-read-timeout: "60s"
    nginx.org/client-max-body-size: "5m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - juiceshop.lab.local
      secretName: juiceshop-tls
  rules:
    - host: juiceshop.lab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: juice-shop
                port:
                  number: 3000
